--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -63,4 +63,179 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
+
+
+
+
+
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.container {
+	max-width: 1400px;
+	margin: 0 auto;
+  }
+  
+  /* Navigation */
+  .main-header .navbar {
+	padding: 10px;
+  }
+  
+  .main-header .navbar ul {
+	display: flex;
+  }
+  
+  .main-header .navbar ul li {
+	display: inline;
+	padding: 0 20px;
+  }
+  
+  .main-header .navbar ul li a {
+	color: #ccc;
+	text-decoration: none;
+	padding: 5px;
+	font-size: 20px;
+  }
+  
+  .logo {
+	margin-left: 35%;
+  }
+  
+  /* Hero section */
+  .main-header .caption {
+	display: inline;
+	text-align: center;
+  }
+  
+  .main-header .caption h1 {
+	font-size: 75px;
+	display: inline-block;
+	padding: 5px;
+	margin: 10% 0 2% 10%;
+  }
+  
+  .main-header .caption a {
+	padding: 0 20px 0 20px;
+	border: #333 1px solid;
+	color: #333;
+	text-decoration: none;
+	margin: 0 0 0 16%;
+	font-size: 20px;
+  }
+  
+  .main-header .header-img {
+	margin: -25% 0 8% 70%;
+  }
+  
+  /* Content section */
+  
+  .content-section .content-box-top {
+	display: inline-block;
+	max-width: 500px;
+	margin: 2% 0 2% 8%;
+	padding: 20px;
+  }
+  
+  .content-section .content-box h1 {
+	font-size: 30px;
+  }
+  
+  .content-section .content-box p {
+	font-size: 18px;
+  }
+  
+  .content-section .middle-img {
+	display: block;
+	margin: 0 auto;
+	width: 100%;
+  }
+  
+  .content-section .content-box-bottom {
+	display: inline-block;
+	max-width: 300px;
+	margin: 2% 0 2% 8%;
+	padding: 20px;
+  }
+  
+  /* Footer */
+  footer h1 {
+	margin-top: 2%;
+  }
+  
+  /* Margin-bottom */
+  footer p {
+	margin-bottom: 2%;
+  }
+  
+  footer .copyright {
+	text-align: center;
+  }
+
+
+
+
+  /*Beginning CSS code for services.html project*/
+body {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+.header-section .container2 .nav-bar ul {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.nav-bar ul li a {
+	color: gray;
+	text-decoration: none;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.header-section .services-header .services-img {
+	display: flex;
+	justify-content: center;
+	width: 1200px;
+	margin: 1% 0;
+}
+
+.container2 h1 {
+	font-size: 28px;
+}
+
+/*Middle section*/
+
+.middle-page {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.middle-page-box {
+	width: 43%;
+	padding: 2%;
+	margin: 2%;
+	background-color: lightgray;
+}
+
+button {
+	color: black;
+	background-color: gray;
+	border: 1px solid black;
+	margin: 3% 0 0 0;
+}
+
+.bottom-of-page {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.footer-bottom-stuff {
+	width: 40%;
+}
+
+.copyright-bottom {
+	display: flex;
+	justify-content: center;
+}
+
+
